@@ -1,3 +1,14 @@
+2012-11-01  Yury Semikhatsky  <yurys@chromium.org>
+
+        Memory instrumentation: do not report memory occupied by RenderObjects referenced from CSSImageGeneratorValue
+        https://bugs.webkit.org/show_bug.cgi?id=100934
+
+        Reviewed by Alexander Pavlov.
+
+        * css/CSSImageGeneratorValue.cpp:
+        (WTF): Skip rederences to RenderObjects from CSSImageGeneratorValue when collecting
+        memory usage data.
+
 2012-11-01  Kihong Kwon  <kihong.kwon@samsung.com>
 
         Add DeviceController base-class to remove duplication of DeviceXXXControler
